--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "emoji-js": "^3.4.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
